--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -1,7 +1,13 @@
 .searchField {
+  border: none;
+  outline: none;
+  box-shadow: none;
   width: 100%;
   height: 44px;
   border-radius: 11px;
+  background-color: var(--light-bg);
+  color: var(--light-text);
+  padding: 9px;
 }
 
 @media screen and (min-width: 1024px) {
