--- a/src/components/SortBy/SortBy.module.css
+++ b/src/components/SortBy/SortBy.module.css
@@ -6,4 +6,7 @@
   width: 100%;
   height: 40px;
   border-radius: 11px;
+  background-color: var(--dark-bg);
+  border: 1px solid var(--stroke);
+  color: var(--light-text);
 }
