--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -5,9 +5,12 @@
   width: 100%;
   height: 44px;
   border-radius: 11px;
+  background-image: url("src/assets/Search.svg");
   background-color: var(--light-bg);
+  background-repeat: no-repeat;
+  background-position: 3% 50%;
   color: var(--light-text);
-  padding: 9px;
+  padding: 0 43px;
 }
 
 @media screen and (min-width: 1024px) {
