--- a/src/components/SortBy/SortBy.module.css
+++ b/src/components/SortBy/SortBy.module.css
@@ -2,13 +2,36 @@
   margin-bottom: 12px;
 }
 
-.dropdown {
-  width: 100%;
+.content {
+  z-index: 1;
+  background-color: var(--dark-bg);
+  border: 1px solid var(--stroke);
+  border-radius: 8px;
+  min-width: var(--radix-select-trigger-width);
+  cursor: pointer;
+}
+
+.trigger {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 12px;
   height: 40px;
   border-radius: 11px;
   background-color: var(--dark-bg);
   border: 1px solid var(--stroke);
   color: var(--light-text);
-  padding: 10px;
+  width: 100%;
   cursor: pointer;
+  outline: none;
+}
+
+.item {
+  padding: 10px;
+  outline: none;
+}
+
+.item:hover,
+.item:focus {
+  background-color: var(--light-bg);
 }
