--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -28,6 +28,10 @@
   gap: 24px;
 }
 
+.filterOptions {
+  font-weight: var(--fw-2);
+}
+
 @media screen and (min-width: 1024px) {
   .main {
     margin-top: -80px;
