--- a/src/components/Region/Region.module.css
+++ b/src/components/Region/Region.module.css
@@ -1,5 +1,6 @@
 .title {
   margin-bottom: 12px;
+  font-size: var(--fs-1);
 }
 
 .tagContainer {
@@ -17,6 +18,7 @@
   font-size: 14px;
   border-radius: 12px;
   color: var(--light-text);
+  font-size: var(--fs-2);
 }
 
 .regionTag:hover {
