--- a/src/components/SortBy/SortBy.module.css
+++ b/src/components/SortBy/SortBy.module.css
@@ -1,5 +1,6 @@
 .title {
   margin-bottom: 12px;
+  font-size: var(--fs-1);
 }
 
 .content {
@@ -24,11 +25,14 @@
   width: 100%;
   cursor: pointer;
   outline: none;
+  font-family: inherit;
+  font-size: var(--fs-2);
 }
 
 .item {
   padding: 10px;
   outline: none;
+  font-size: var(--fs-2);
 }
 
 .item:hover,
