--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -11,6 +11,7 @@
   color: var(--light-text);
   padding: 0 43px;
   font-size: var(--fs-2);
+  flex-grow: 1;
 }
 
 @media screen and (min-width: 1024px) {
