--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -2,9 +2,8 @@
   display: flex;
   flex-direction: column;
   width: 94%;
-  margin: 0 auto;
+  margin: -130px auto 100px auto;
   padding: 24px 12px;
-  margin-top: -130px;
   position: relative;
   z-index: 1;
   gap: 36px;
