--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 300px;
   overflow: hidden;
-  background-image: url("src/assets/hero-sm.png");
+  background-image: url("../../assets/hero-sm.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -17,7 +17,7 @@
 
 @media screen and (min-width: 1024px) {
   .header {
-    background-image: url("src/assets/hero-lg.png");
+    background-image: url("../../assets/hero-lg.png");
     height: 400px;
   }
 
