--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -4,7 +4,7 @@
   width: 100%;
   height: 44px;
   border-radius: 11px;
-  background-image: url("src/assets/Search.svg");
+  background-image: url("../../assets/Search.svg");
   background-color: var(--light-bg);
   background-repeat: no-repeat;
   background-position: 3% 50%;
